--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/crypto_db?userTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
