--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,9 @@
-
 spring.datasource.url=jdbc:mysql://localhost:3306/pdv_db?userTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
